fix align buttons issues

--- a/client/src/app/main/dashboard/dashboard-create-ticket/create-ticket-form.scss
+++ b/client/src/app/main/dashboard/dashboard-create-ticket/create-ticket-form.scss
@@ -8,6 +8,11 @@
         margin-top: 20px;
     }
 
+    &__container {
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
     &__buttons-container {
         display: flex;
         flex-direction: column;
@@ -19,8 +24,11 @@
             flex-direction: row;
             justify-content: flex-end;
             align-items: center;
-            width: 100%;
         }
+    }
+
+    &__captcha-container {
+        padding: 20px;
     }
 
     &__captcha {
